Fix elements in html to work better with styles, and Add grid and align top of header

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,56 @@ img {
 }
 
 .header {
-    
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+
+.header-profile {
+    display: grid;
+    grid-template-columns: 4fr 0.2fr 0.5fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.header-profile > img,
+.header-profile > input {
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+    align-self: center;
+    padding-left: 20px;
+}
+
+input[type="search"] {
+    margin-left: 50px;
+    height: 20px;
+    width: 750px;
+    border-radius: 15px;
+    border-width: 1px;
+}
+
+.header-profile > a:first-of-type {
+    grid-column: 2 / 2;
+    grid-row: 1 / 1;
+    justify-self: end;
+    align-content: center;
+}
+
+.header-profile > a:nth-of-type(2) {
+    grid-column: 3 / 3;
+    grid-row: 1 / 1;
+    justify-self: end;
+    align-content: center;
+    padding-right: 20px;
+}
+
+.header-profile > a:last-of-type {
+   grid-column: 4 / 4;
+   grid-row: 1 / 1;
+   align-content: center;
+   font-weight: bold;
+}
+
+.header-nav {
+
 }
 
 .body {
@@ -83,11 +132,13 @@ img {
 }
 
 .projects {
-   
+   grid-column: 1 / 1;
+   grid-row: 1 / 3;
 }
 
 .announcement-sidebar {
-    
+    grid-column: 2 / 2;
+    grid-row: 1 / 1;
 }
 
 .trending-sidebar {
